# Movie-Recommendation-System

./: .gitignore  README.md  app.py  features.py  main.py  main.tex  model_for_streamlit.pt  movielens_visualization.ipynb  ncf_movielens.ipynb  project_slides.tex  pyproject.toml  requirements.txt  section1_data_pipeline.py  section2_model_architecture.py  section3_distributed_training.py  section4_evaluation.py
static/: styles.css
templates/: index.html
