[project]
name = "movie-recommendation-system"
version = "0.1.0"
description = "Distributed Neural Collaborative Filtering recommender for MovieLens."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pyspark>=3.4.0",
    "pyarrow>=12.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.0.0",
]

[tool.uv]
package = false
