[project]
name = "movie-recommendation-system"
version = "0.1.0"
description = "Distributed Neural Collaborative Filtering recommender for MovieLens."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.0.0",
]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Installs Intel Mac compatible version, otherwise pulls standard >=2.1.0
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.1.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[tool.uv]
package = false